Changed path to directory

--- a/ACA_JS311/311_class3_classNotes/package.json
+++ b/ACA_JS311/311_class3_classNotes/package.json
@@ -1,7 +1,7 @@
 {
     "name" : "first-app",
     "scripts" : {
-        "start" : "node index.js"
+        "start" : "node ./311_class3_classNotes/index.js"
     },
     "main" : "index.js",
     "dependencies" : {
